# DIO

APIs/workout_api/: main.py
APIs/workout_api/atleta/: models.py  schemas.py
APIs/workout_api/categorias/: models.py  schemas.py
APIs/workout_api/centro_treinamento/: models.py  schemas.py
APIs/workout_api/contrib/: models.py  schemas.py
Python/Back_End_Python_DIO/: Sistema_Bancario_DIO.py
TDD_Projeto1/: Makefile  docker-compose.yml  pyproject.toml
TDD_Projeto1/store/: main.py
TDD_Projeto1/store/core/: config.py
TDD_Projeto1/tests/: conftest.py  factories.py
TDD_Projeto1/tests/schemas/: test_product.py
TDD_Projeto1/tests/usecases/: test_product.py
