[project]
name = "tdd-projeto1"
version = "0.1.0"
description = ""
authors = [
    {name = "CristianoKchico",email = "cristianofdsantos@gmail.com"}
]
readme = "README.md"
requires-python = "3.13.1"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "motor (>=3.7.0,<4.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-asyncio (>=0.25.3,<0.26.0)",
    "pre-commit (>=4.1.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
